<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="103dp"
    android:layout_height="wrap_content"
    android:background="@drawable/chart_bg_black_with_border"
    android:orientation="vertical"
    android:paddingBottom="3dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="3dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time_label"
            style="@style/kline_style_chart_info_left_label"
            android:text="时间" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/kline_style_chart_info_right_value"
            tools:text="08-03 10:45" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/kline_style_chart_info_left_label"
            android:text="@string/chart_open_price" />

        <TextView
            android:id="@+id/tv_open_price"
            style="@style/kline_style_chart_info_right_value"
            tools:text="@string/chart_price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/kline_style_chart_info_left_label"
            android:text="@string/chart_high_price" />

        <TextView
            android:id="@+id/tv_high_price"
            style="@style/kline_style_chart_info_right_value"
            tools:text="@string/chart_price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/kline_style_chart_info_left_label"
            android:text="@string/chart_low_price" />

        <TextView
            android:id="@+id/tv_low_price"
            style="@style/kline_style_chart_info_right_value"
            tools:text="@string/chart_price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/kline_style_chart_info_left_label"
            android:text="@string/chart_close_price" />

        <TextView
            android:id="@+id/tv_close_price"
            style="@style/kline_style_chart_info_right_value"
            tools:text="@string/chart_price" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/kline_style_chart_info_left_label"
            android:text="@string/chart_change_amount" />

        <TextView
            android:id="@+id/tv_change_amount"
            style="@style/kline_style_chart_info_right_value"
            tools:text="@string/chart_price" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/kline_style_chart_info_left_label"
            android:text="@string/chart_change_rate" />

        <TextView
            android:id="@+id/tv_change_rate"
            style="@style/kline_style_chart_info_right_value"
            tools:text="@string/chart_price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/kline_style_chart_info_left_label"
            android:text="@string/chart_volume" />

        <TextView
            android:id="@+id/tv_vol"
            style="@style/kline_style_chart_info_right_value"
            tools:text="@string/chart_price" />
    </LinearLayout>
</LinearLayout>