<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_quota_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/chart_gray_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/chart_main_chart"
            android:textColor="@color/chart_text_gray"
            android:textSize="12dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@color/chart_gray_line" />

        <LinearLayout
            android:id="@+id/ll_main_quota"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_main_quota_hide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/chart_hide"
            android:textColor="@color/chart_wheel_indicator_color"
            android:textSize="12dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/chart_kline_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/chart_second_chart"
            android:textColor="@color/chart_text_gray"
            android:textSize="12dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@color/chart_gray_line" />

        <LinearLayout
            android:id="@+id/ll_second_quota"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_second_quota_hide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/chart_hide"
            android:textColor="@color/chart_wheel_indicator_color"
            android:textSize="12dp" />

    </LinearLayout>
</LinearLayout>
